<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name">DevCon 2015</string>
  <string name="hello_world">Hello world!</string>
  <string name="action_settings">Settings</string>
  <string name="app_id">625994234086470</string>

  <!-- Initial Activity -->
  <string name="initial_loading">Setting up ..</string>
  <string name="initial_loading_done">Hang tight. We\'re about to launch the rocket!</string>

  <!-- Login Activity -->
  <string name="log_in_with_facebook">Log in with Facebook</string>
  <string name="logo_description">DevCon Logo</string>
  <string name="devcon_title">Developer Conference Yangon 2015</string>
  <string name="devcon_slogan">
    Experience Means Everything
  </string>

  <!-- Schedule Activity -->
  <string name="schedule_activity">Schedules</string>
  <string name="explore_title">Explore</string>
  <string name="first_day">NOV 21</string>
  <string name="second_day">NOV 22</string>
  <string name="drawer_close">Close navigation drawer</string>
  <string name="drawer_open">Open navigation drawer</string>

  <!-- Speaker List -->
  <string name="speaker_list">Speaker List</string>

  <!-- Updates -->
  <string name="updates">Updates</string>

  <!-- Schedule row -->
  <string name="keynote_background">Keynote</string>
  <string name="lightning_talk_label">Lightning Talk</string>

  <!-- Navigation Drawer Item -->
  <array name="nav_drawer_items">
    <item>My Schedules</item>
    <item>Lightening Talks</item>
    <item>Explore</item>
    <item>Speakers</item>
    <item>Sponsors</item>
  </array>

  <!-- Speaker Item -->
  <string name="speaker_profile">Speaker profile</string>
  <string name="placeholder_title">Ryan Stone, Mission Specialist</string>
  <string name="placeholder_text">Houston, Houston in the blind, this is Mission Specialist Ryan
    Stone reporting from the Shenzhou.
    I\'m about to undock from Tiangong… and I have a bad feeling about it
  </string>
  <string name="title_activity_schedule_detail">Schedule Detail</string>

  <!-- Talk Detail -->
  <string name="photo_banner">Photo banner</string>
  <string name="placeholder_talk_description">Houston, Houston in the blind, this is Mission
    Specialist Ryan
    Stone reporting from the Shenzhou.
    I\'m about to undock from Tiangong… and I have a bad feeling about it.
    \nMaster at least one multi-paradigm language.
    Mastering a language gives you a great sense of perspective.
    To do this, you must write a lot of code, read a lot more, and learn the gotchas and best
    practices.

    Specialist Ryan
    Stone reporting from the Shenzhou.
    I\'m about to undock from Tiangong… and I have a bad feeling about it.
    \nMaster at least one multi-paradigm language.
    Mastering a language gives you a great sense of perspective.
    To do this, you must write a lot of code, read a lot more, and learn the gotchas and best
    practices.

    Specialist Ryan
    Stone reporting from the Shenzhou.
    I\'m about to undock from Tiangong… and I have a bad feeling about it.
    \nMaster at least one multi-paradigm language.
    Mastering a language gives you a great sense of perspective.
    To do this, you must write a lot of code, read a lot more, and learn the gotchas and best
    practices.

    Specialist Ryan
    Stone reporting from the Shenzhou.
    I\'m about to undock from Tiangong… and I have a bad feeling about it.
    \nMaster at least one multi-paradigm language.
    Mastering a language gives you a great sense of perspective.
    To do this, you must write a lot of code, read a lot more, and learn the gotchas and best
    practices.
  </string>
  <string name="talk_detail_time_and_place">{day}, {from_time} - {to_time} in {room}</string>
  <string name="speakers">Speakers</string>
  <string name="add_to_fav">Add to Favourites</string>
  <string name="title_activity_speaker_detail">SpeakerDetailActivity</string>

  <!-- Speaker Detail -->
  <string name="related_talks">Related Talks</string>


  <!-- About Dialog -->
  <!-- Shown in the 'About' window of the app. -->
  <string name="about_body"><![CDATA[
        <b>Devcon Myanmar 2015</b><br>
        Version %s<br><br>
    ]]></string>
  <string name="about_contributors">Contributors</string>

  <!-- Shown as a link in the About screen of the app; user can click it to see the licenses. -->
  <string name="about_licenses">Open Source Licenses</string>
  <!-- Title text for dialog screen about the application -->
  <string name="title_about">About</string>

  <!-- My Schedule -->
  <string name="my_schedule_title">My Schedule</string>

  <!-- Menu refresh -->
  <string name="refresh">Refresh</string>

  <!-- Toast messages -->
  <string name="no_connection_cannot_connect">No connection. Cannot sync right now.</string>
  <string name="oops">Oops. Something went wrong. Please check your connection.</string>
  <string name="lightening_title">Lightening Talks</string>

  <string name="sponsors">Sponsors</string>

  <string name="error_no_lightening_talk_try_again">
    No Lightening talks right now. Tap to try again.
  </string>
</resources>
