<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_background"
    tools:context=".LoginActivity">

  <ImageView
      style="@style/Login.Logo"
      android:layout_width="100dp"
      android:layout_height="100dp"
      android:contentDescription="@string/logo_description"
      android:layout_alignParentTop="true"
      android:layout_centerHorizontal="true"/>

  <TextView
      style="@style/Login.Title"
      android:id="@+id/devcon_title"
      android:text="@string/devcon_title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerVertical="true"
      android:layout_centerHorizontal="true"/>

  <TextView
      style="@style/Login.Slogan"
      android:id="@+id/devcon_slogan"
      android:text="@string/devcon_slogan"
      android:layout_below="@id/devcon_title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerVertical="true"
      android:layout_centerHorizontal="true"/>

  <Button
      style="@style/Login.FbButton"
      android:id="@+id/login_with_facebook"
      android:text="@string/log_in_with_facebook"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_centerHorizontal="true"/>
</RelativeLayout>
